   to eliminate tromboned calls.  A tromboned call goes out an interface and comes
   back into the same interface.  Tromboned calls happen because of call routing,
   call deflection, call forwarding, and call transfer.
 * Added the ability to send and receive ETSI Advice-Of-Charge messages. 
 * Added the ability to support call waiting calls.  (The SETUP has no B channel
   assigned.)

Asterisk Manager Interface
--------------------------
 * The Hangup action now accepts a Cause header which may be used to
   set the channel's hangup cause.
 * sslprivatekey option added to manager.conf and http.conf.  Adds the ability
   to specify a separate .pem file to hold a private key.  By default sslcert
   is used to hold both the public and private key.
 * Options in manager.conf and http.conf with the 'ssl' prefix have been replaced
   for options containing the 'tls' prefix.  For example, 'sslenable' is now
   'tlsenable'.  This has been done in effort to keep ssl and tls options consistent
   across all .conf files. All affected sample.conf files have been modified to
   reflect this change.  Previous options such as 'sslenable' still work,
   but options with the 'tls' prefix are preferred.
 * Added a MuteAudio AMI action for muting inbound and/or outbound audio
   in a channel. (res_mutestream.so)
 * The configuration file manager.conf now supports a channelvars option, which
   specifies a list of channel variables to include in each channel-oriented
   event.
 * The redirect command now has new parameters ExtraContext, ExtraExtension, 
   and ExtraPriority to allow redirecting the second channel to a different
   location than the first.
 * Added new event "JabberStatus" in the Jabber module to monitor buddies
   status.
 * Added a "MixMonitorMute" AMI action for muting inbound and/or outbound audio
   in a MixMonitor recording.
 * The 'iax2 show peers' output is now similar to the expected output of
   'sip show peers'.